# offlineros2demo

./: CMakeLists.txt  package.xml  readme.md
include/: asr_offline_record_sample.h
src/: asr_offline_record_sample.c  com_test.c  main.c  record.c  record.h  speech_recognizer.c
